AUTOMAKE_OPTIONS = foreign

ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS = -Werror -Wall -pedantic

lib_LTLIBRARIES = libguac-client-video.la

# All source files of libguac-client-ball
libguac_client_video_la_SOURCES = src/videosender.c

# libtool versioning information
libguac_client_video_la_LDFLAGS = -version-info 0:0:0